get ready for review

--- a/about.html
+++ b/about.html
@@ -92,21 +92,25 @@
                 </p>
             </div> -->
             <div class="content--block">
-                <p><a class="btn--open">Trasparenza</a></p>
+                <p class="btn--open"><a>Trasparenza</a></p>
             </div>
-            <div class="content--block content--open --info" id="trasparenza">
-                <p>Associazione Culturale MU</p>
-                <p>via Giuseppe Verzaglia, 4
-                    <br>47521 Cesena (FC) Italia
-                </p>
-                <p>CF 90074590408
-                    <br>P.IVA 04256550403
-                </p>
-                <p>Dati di cui all’articolo 1, commi 125-129, L. 124/2017
-                    <br>Anno 2019
-                </p>
-                <div><img src="assets/uploads/about/trasparenza-2019.png" width="100%"></div>
+            <div class="content--block content--open">
+                <div class="content--block">
+                    <p>Associazione Culturale MU</p>
+                    <h4>via Giuseppe Verzaglia, 4</h4>
+                    <h4>47521 Cesena (FC) Italia</h4>
+                    <h4>CF 90074590408</h4>
+                    <h4>P.IVA 04256550403</h4>
+                </div>
+                <div class="content--block">
+                    <h4>Dati di cui all’articolo 1, commi 125-129, L. 124/2017</h4>
+                    <h4>Anno 2019</h4>
+                    <div class="content--block">
+                        <img src="assets/uploads/about/trasparenza-2019.png" width="100%">
+                    </div>
+                </div>
             </div>
+
         </section>
         <div class="nav--btn">
             <!-- <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
