--- a/eventi.html
+++ b/eventi.html
@@ -166,7 +166,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/2019-blutwurst.html">
+                        <a href="../2019/072019-blutwurst.html">
                             <h2>2.7.2019</h2>
                             <h3>BLUTWURST – "Ricercar nell’ombra" di Emmanuel Holterbach</h3>
                         </a>
@@ -230,7 +230,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/032019-eckhardt.html">
+                        <a href="../2019/012019-radio88.html">
                             <h2>23.1.2019</h2>
                             <h3>Radio 88</h3>
                         </a>
@@ -247,7 +247,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="../2018/102018-lea-bertucci.html">
                             <h2>21.10.2018</h2>
                             <h3>Lea Bertucci – Solo</h3>
                         </a>
@@ -255,7 +255,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="../2018/092018-burkhard-beins.html">
                             <h2>21.9.2018</h2>
                             <h3>Burkhard Beins – POR</h3>
                         </a>
@@ -263,7 +263,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="../2018/052018-zimmerfrei.html">
                             <h2>26.5.2018</h2>
                             <h3>ZimmerFrei – Safari</h3>
                         </a>
@@ -271,7 +271,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="../2018/052018-vaaalr.html">
                             <h2>26.5.2018</h2>
                             <h3>VA AA LR – Concert for Signal Flares</h3>
                         </a>
@@ -279,7 +279,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="../2018/052018-claudio-rocchetti.html">
                             <h2>25.5.2018</h2>
                             <h3>Claudio Rocchetti – Goldberg Variations</h3>
                         </a>
@@ -400,7 +400,7 @@
                 <li class="content--block">
                     <div class="content--list">
                         <a href="">
-                            <h2>2/9.6.2018</h2>
+                            <h2>2-9.6.2018</h2>
                             <h3>Clio Casadei – Soggetto</h3>
                         </a>
                     </div>
@@ -415,9 +415,9 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="../2018/012018-tule.html">
                             <h2>19-20.1.2018</h2>
-                            <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
+                            <h3>TULE – Tecnologie di riproduzione del suono e musica meccanica</h3>
                         </a>
                     </div>
                 </li>
@@ -497,7 +497,7 @@
                 <li class="content--block">
                     <div class="content--list">
                         <a href="">
-                            <h2>21/28.3.2017</h2>
+                            <h2>21-28.3.2017</h2>
                             <h3>MU04</h3>
                         </a>
                     </div>
@@ -511,11 +511,51 @@
                         </a>
                     </div>
                 </li>
-                <li class="content--block" id="2016">
+                <li class="content--block">
                     <div class="content--list">
                         <a href="">
-                            <h2>29.10.2016/18.12.2016</h2>
+                            <h2>12-13.11.2016</h2>
+                            <h3>MU03</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="">
+                            <h2>5-27.11.2016</h2>
+                            <h3>MU non esiste</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="">
+                            <h2>29.10.2016-18.12.2016</h2>
                             <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="">
+                            <h2>31.7.2016</h2>
+                            <h3>MU02</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="">
+                            <h2>9.6.2016</h2>
+                            <h3>MU01</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="">
+                            <h2>21.5.2016</h2>
+                            <h3>MU00</h3>
                         </a>
                     </div>
                 </li>
@@ -530,12 +570,12 @@
     <script>
         const btns = document.querySelectorAll(".nav--link");
         btns[0].classList.add("active");
-        btns.forEach(element => {
-            element.addEventListener("click", () => {
+        btns.forEach(b => {
+            b.addEventListener("click", () => {
                 btns.forEach(btn => {
                     btn.classList.remove("active");
                 })
-                element.classList.add("active");
+                b.classList.add("active");
             });
         });
     </script>
