--- a/tule.html
+++ b/tule.html
@@ -64,13 +64,13 @@
             </div>
             <div class="content--block">
                 <div class="nav--link">
-                    <h2><a href="/2021/082021-tule.html">Tule 2021</a></h2>
+                    <h2><a href="../2021/082021-tule.html">Tule 2021</a></h2>
                 </div>
                 <div class="nav--link">
-                    <h2><a href="/2020/082020-tule.html">Tule 2020</a></h2>
+                    <h2><a href="../2020/082020-tule.html">Tule 2020</a></h2>
                 </div>
                 <div class="nav--link">
-                    <h2><a href="">Tule 2018</a></h2>
+                    <h2><a href="../2018/012018-tule.html">Tule 2018</a></h2>
                 </div>
                 <div class="nav--link">
                     <h2><a href="">Tule 2016</a></h2>
