--- a/tule.html
+++ b/tule.html
@@ -70,7 +70,7 @@
                     <h2><a href="../2020/082020-tule.html">Tule 2020</a></h2>
                 </div>
                 <div class="nav--link">
-                    <h2><a href="2018/012018-tule.html">Tule 2018</a></h2>
+                    <h2><a href="/mu/2018/012018-tule.html">Tule 2018</a></h2>
                 </div>
                 <div class="nav--link">
                     <h2><a href="">Tule 2016</a></h2>
