add /mu/ to relative links to work on github pages

--- a/eventi.html
+++ b/eventi.html
@@ -75,7 +75,7 @@
                 <!-- 2021 -->
                 <li class="content--block" id="2021">
                     <div class="content--list">
-                        <a href="../2021/122021-901-editions-showcase.html">
+                        <a href="/mu/2021/122021-901-editions-showcase.html">
                             <h2>11.12.2021</h2>
                             <h3>901 Editions Showcase – Giuseppe Ielasi | kNN / Renato Grieco | Luigi Turra</h3>
                         </a>
@@ -83,7 +83,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2021/122021-bertucci-naibo.html">
+                        <a href="/mu/2021/122021-bertucci-naibo.html">
                             <h2>10.12.2021</h2>
                             <h3>Lea Bertucci | Francesca Naibo</h3>
                         </a>
@@ -91,7 +91,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2021/112021-almare.html">
+                        <a href="/mu/2021/112021-almare.html">
                             <h2>27.11.2021</h2>
                             <h3>ALMARE – Cronache di vita di Dorothea Ïesj S.P.U. "Episodio 1 – La mattina del quinto
                                 anniversario"</h3>
@@ -100,7 +100,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2021/112021-blutwurst.html">
+                        <a href="/mu/2021/112021-blutwurst.html">
                             <h2>26.11.2021</h2>
                             <h3>BLUTWURST – Parva Lumina | Giovanni di Domenico</h3>
                         </a>
@@ -108,7 +108,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2021/082021-tule.html">
+                        <a href="/mu/2021/082021-tule.html">
                             <h2>28-29.8.2021 + 11.9.2021</h2>
                             <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
                         </a>
@@ -117,7 +117,7 @@
                 <!-- 2020 -->
                 <li class="content--block" id="2020">
                     <div class="content--list">
-                        <a href="../2020/092020-giovanni-di-domenico.html">
+                        <a href="/mu/2020/092020-giovanni-di-domenico.html">
                             <h2>10.9.2020</h2>
                             <h3>Giovanni di Domenico</h3>
                         </a>
@@ -125,7 +125,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2020/092020-peter-ablinger.html">
+                        <a href="/mu/2020/092020-peter-ablinger.html">
                             <h2>5.9.2020</h2>
                             <h3>Peter Ablinger – OUTSIDE &</h3>
                         </a>
@@ -133,7 +133,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2020/082020-tule.html">
+                        <a href="/mu/2020/082020-tule.html">
                             <h2>29-30.8.2020</h2>
                             <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
                         </a>
@@ -142,7 +142,7 @@
                 <!-- 2019 -->
                 <li class="content--block" id="2019">
                     <div class="content--list">
-                        <a href="../2019/092019-bourne-tarozzi.html">
+                        <a href="/mu/2019/092019-bourne-tarozzi.html">
                             <h2>15.9.2019</h2>
                             <h3>Anne Bourne | Silvia Tarozzi</h3>
                         </a>
@@ -150,7 +150,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/092019-marja-ahti-paradoxes45.html">
+                        <a href="/mu/2019/092019-marja-ahti-paradoxes45.html">
                             <h2>4.9.2019</h2>
                             <h3>Marja Ahti | Paradoxes#45</h3>
                         </a>
@@ -158,7 +158,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/092019-marja-ahti.html">
+                        <a href="/mu/2019/092019-marja-ahti.html">
                             <h2>3.9.2019</h2>
                             <h3>Marja Ahti</h3>
                         </a>
@@ -166,7 +166,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/072019-blutwurst.html">
+                        <a href="/mu/2019/072019-blutwurst.html">
                             <h2>2.7.2019</h2>
                             <h3>BLUTWURST – "Ricercar nell’ombra" di Emmanuel Holterbach</h3>
                         </a>
@@ -174,7 +174,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/062019-murayama-guionnet.html">
+                        <a href="/mu/2019/062019-murayama-guionnet.html">
                             <h2>11.6.2019</h2>
                             <h3>Seijiro Murayama | Jean-Luc Guionnet</h3>
                         </a>
@@ -182,7 +182,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/062019-mappe-per-il-territorio.html">
+                        <a href="/mu/2019/062019-mappe-per-il-territorio.html">
                             <h2>8-9.6.2019</h2>
                             <h3>Mappe per il ritorno</h3>
                         </a>
@@ -190,7 +190,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/052019-daidoji.html">
+                        <a href="/mu/2019/052019-daidoji.html">
                             <h2>26.5.2019</h2>
                             <h3>Rino Daidoji – La mattina e un po' di piccole notti</h3>
                         </a>
@@ -198,7 +198,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/052019-mu-periferico-festival.html">
+                        <a href="/mu/2019/052019-mu-periferico-festival.html">
                             <h2>10.5.2019</h2>
                             <h3>MU & Periferico Festival</h3>
                         </a>
@@ -206,7 +206,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/042019-ornette.html">
+                        <a href="/mu/2019/042019-ornette.html">
                             <h2>11.4.2019</h2>
                             <h3>Ornette: Made in America</h3>
                         </a>
@@ -214,7 +214,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/032019-francesco-bergamo.html">
+                        <a href="/mu/2019/032019-francesco-bergamo.html">
                             <h2>10.3.2019</h2>
                             <h3>Francesco Bergamo – Il disegno del paesaggio sonoro</h3>
                         </a>
@@ -222,7 +222,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/032019-eckhardt.html">
+                        <a href="/mu/2019/032019-eckhardt.html">
                             <h2>10.3.2019</h2>
                             <h3>Julia Eckhardt – OCCAM IV</h3>
                         </a>
@@ -230,7 +230,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2019/012019-radio88.html">
+                        <a href="/mu/2019/012019-radio88.html">
                             <h2>23.1.2019</h2>
                             <h3>Radio 88</h3>
                         </a>
@@ -239,7 +239,7 @@
                 <!-- 2018 -->
                 <li class="content--block" id="2018">
                     <div class="content--list">
-                        <a href="../2018/112018-sarah-hennies.html">
+                        <a href="/mu/2018/112018-sarah-hennies.html">
                             <h2>22.11.2018</h2>
                             <h3>Sarah Hennies – Falsetto</h3>
                         </a>
@@ -247,7 +247,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2018/102018-lea-bertucci.html">
+                        <a href="/mu/2018/102018-lea-bertucci.html">
                             <h2>21.10.2018</h2>
                             <h3>Lea Bertucci – Solo</h3>
                         </a>
@@ -255,7 +255,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2018/092018-burkhard-beins.html">
+                        <a href="/mu/2018/092018-burkhard-beins.html">
                             <h2>21.9.2018</h2>
                             <h3>Burkhard Beins – POR</h3>
                         </a>
@@ -263,7 +263,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2018/052018-zimmerfrei.html">
+                        <a href="/mu/2018/052018-zimmerfrei.html">
                             <h2>26.5.2018</h2>
                             <h3>ZimmerFrei – Safari</h3>
                         </a>
@@ -271,7 +271,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2018/052018-vaaalr.html">
+                        <a href="/mu/2018/052018-vaaalr.html">
                             <h2>26.5.2018</h2>
                             <h3>VA AA LR – Concert for Signal Flares</h3>
                         </a>
@@ -279,7 +279,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2018/052018-claudio-rocchetti.html">
+                        <a href="/mu/2018/052018-claudio-rocchetti.html">
                             <h2>25.5.2018</h2>
                             <h3>Claudio Rocchetti – Goldberg Variations</h3>
                         </a>
@@ -415,7 +415,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="../2018/012018-tule.html">
+                        <a href="/mu/2018/012018-tule.html">
                             <h2>19-20.1.2018</h2>
                             <h3>TULE – Tecnologie di riproduzione del suono e musica meccanica</h3>
                         </a>
