update all content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MU</title>
 
     <meta name="description"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <link rel="canonical" href="https://www.mmmu.it/">
     <meta name="keywords" content="mu, suono, pratiche spaziali, musica">
     <meta name="author" content="Giulia Polenta">
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="MU">
     <meta property="og:description"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta property="og:url" content="https://www.mmmu.it/">
     <meta property="og:site_name" content="MU">
     <meta property="og:image" content="assets/logo-mu.svg">
@@ -26,9 +26,9 @@
     <meta property="og:image:secure_url" content="assets/logo-mu.svg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta name="twitter:title"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta name="twitter:image" content="assets/logo-mu.svg">
     <meta name="twitter:image:alt"
         content="Il logo di MU ha la forma di una mandorla con il bordo nero e lo sfondo bianco">
@@ -44,9 +44,9 @@
 </head>
 
 <body>
-    <div class="nav--btn">
+    <!-- <div class="nav--btn">
         <a class="btn--close" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
-    </div>
+    </div> -->
     <main class="main--home">
         <header>
             <nav class="menu">
@@ -63,14 +63,14 @@
             </nav>
         </header>
         <footer>
-            <div class="logo">
-                <h1><span>M</span><img src="assets/logo-mu.svg"><span>U</span></h1>
-            </div>
-            <ul>
+            <ul class="contact">
                 <li><a href="https://www.facebook.com/munonesiste">Facebook </a></li>
                 <li><a href="https://www.instagram.com/munonesiste/">Instagram</a></li>
                 <li><a href="https://www.youtube.com/channel/UCaIzG0dQ4hnzzTw4ivjeCdQ">YouTube</a></li>
             </ul>
+            <div class="logo">
+                <h1><span>M</span><img src="assets/logo-mu.svg"><span>U</span></h1>
+            </div>
         </footer>
     </main>
     <script src="script.js"></script>
