--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <title>MU | About</title>
 
     <meta name="description"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <link rel="canonical" href="https://www.mmmu.it/">
     <meta name="keywords" content="mu, suono, pratiche spaziali, musica">
     <meta name="author" content="Giulia Polenta">
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="MU">
     <meta property="og:description"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta property="og:url" content="https://www.mmmu.it/">
     <meta property="og:site_name" content="MU">
     <meta property="og:image" content="assets/logo-mu.svg">
@@ -26,9 +26,9 @@
     <meta property="og:image:secure_url" content="assets/logo-mu.svg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta name="twitter:title"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta name="twitter:image" content="assets/logo-mu.svg">
     <meta name="twitter:image:alt"
         content="Il logo di MU ha la forma di una mandorla con il bordo nero e lo sfondo bianco">
@@ -64,14 +64,14 @@
         </section>
         <section class="col--content">
             <div class="content--block">
-                <p>MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali, nato
+                <p>MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali, nato
                     dalla sinergia tra i fondatori Enrico Malatesta, Giovanni Lami e Glauco Salvo.
                 </p>
                 <p>MU agisce in collaborazione con artisti, ricercatori italiani ed internazionali, attraverso
-                    l’ideazione e la presentazione di attività, concerti, performance, ascolti guidati e iniziative
+                    l'ideazione e la presentazione di attività, concerti, performance, ascolti guidati e iniziative
                     volte alla sperimentazione in ambiti quali musica, sound art, ecologia e pedagogia.</p>
-                <p>L’intento di MU è produrre un riflesso socioculturale aperto, vitale e sostenibile, favorendo la
-                    circuitazione di pratiche e poetiche liminali; promuovendo l’ascolto come azione attiva e veicolo di
+                <p>L'intento di MU è produrre un riflesso socioculturale aperto, vitale e sostenibile, favorendo la
+                    circuitazione di pratiche e poetiche liminali; promuovendo l'ascolto come azione attiva e veicolo di
                     relazione agli spazi, agli individui e agli strumenti.</p>
             </div>
             <div class="content--block">
@@ -86,7 +86,7 @@
                     <h4>P.IVA 04256550403</h4>
                 </div>
                 <div class="content--block">
-                    <h4>Dati di cui all’articolo 1, commi 125-129, L. 124/2017</h4>
+                    <h4>Dati di cui all'articolo 1, commi 125-129, L. 124/2017</h4>
                     <h4>Anno 2019</h4>
                     <div class="content--block">
                         <img src="assets/uploads/about/trasparenza-2019.png" width="100%">
