--- a/eventi.html
+++ b/eventi.html
@@ -8,7 +8,7 @@
     <title>MU | Eventi</title>
 
     <meta name="description"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <link rel="canonical" href="https://www.mmmu.it/">
     <meta name="keywords" content="mu, suono, pratiche spaziali, musica">
     <meta name="author" content="Giulia Polenta">
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="MU">
     <meta property="og:description"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta property="og:url" content="https://www.mmmu.it/">
     <meta property="og:site_name" content="MU">
     <meta property="og:image" content="assets/logo-mu.svg">
@@ -26,9 +26,9 @@
     <meta property="og:image:secure_url" content="assets/logo-mu.svg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta name="twitter:title"
-        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+        content="MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
     <meta name="twitter:image" content="assets/logo-mu.svg">
     <meta name="twitter:image:alt"
         content="Il logo di MU ha la forma di una mandorla con il bordo nero e lo sfondo bianco">
@@ -45,33 +45,31 @@
 
 <body>
     <main class="main--pages">
-        <section class="col--nav --scroll">
-            <ul class="content--nav" id="event--nav">
-                <!-- <li class="nav--link">
-                    <h2><a href="#2022">2022</a></h2>
-                </li> -->
-                <li class="nav--link">
+        <section class="col--nav --no-scrollbar" id="event--nav">
+            <ul class="content--nav">
+                <li class="nav--link --colored">
                     <h2><a href="#2021">2021</a></h2>
                 </li>
-                <li class="nav--link">
+                <li class="nav--link --colored">
                     <h2><a href="#2020">2020</a></h2>
                 </li>
-                <li class="nav--link">
+                <li class="nav--link --colored">
                     <h2><a href="#2019">2019</a></h2>
                 </li>
-                <li class="nav--link">
+                <li class="nav--link --colored">
                     <h2><a href="#2018">2018</a></h2>
                 </li>
-                <li class="nav--link">
+                <li class="nav--link --colored">
                     <h2><a href="#2017">2017</a></h2>
                 </li>
-                <li class="nav--link">
+                <li class="nav--link --colored">
                     <h2><a href="#2016">2016</a></h2>
                 </li>
             </ul>
+
         </section>
-        <section class="col--content">
-            <ul id="event--list">
+        <section class="col--content" id="event--list">
+            <ul>
                 <!-- 2021 -->
                 <li class="content--block" id="2021">
                     <div class="content--list">
@@ -168,7 +166,7 @@
                     <div class="content--list">
                         <a href="/mu/2019/072019-blutwurst.html">
                             <h2>2.7.2019</h2>
-                            <h3>BLUTWURST – "Ricercar nell’ombra" di Emmanuel Holterbach</h3>
+                            <h3>BLUTWURST – "Ricercar nell'ombra" di Emmanuel Holterbach</h3>
                         </a>
                     </div>
                 </li>
@@ -261,23 +259,25 @@
                         </a>
                     </div>
                 </li>
+
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="/mu/2018/052018-zimmerfrei.html">
-                            <h2>26.5.2018</h2>
-                            <h3>ZimmerFrei – Safari</h3>
+                        <a href="/mu/2018/052018-marea.html">
+                            <h2>18-26.5.2018</h2>
+                            <h3>Marea</h3>
                         </a>
                     </div>
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="/mu/2018/052018-vaaalr.html">
-                            <h2>26.5.2018</h2>
-                            <h3>VA AA LR – Concert for Signal Flares</h3>
+                        <a href="/mu/2018/062018-clio-casadei.html">
+                            <h2>2.6.2018 + 9.6.2018</h2>
+                            <h3>Clio Casadei – Soggetto</h3>
                         </a>
                     </div>
                 </li>
-                <li class="content--block">
+
+                <!-- <li class="content--block">
                     <div class="content--list">
                         <a href="/mu/2018/052018-claudio-rocchetti.html">
                             <h2>25.5.2018</h2>
@@ -287,7 +287,31 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2018/052018-carozzi-safari.html">
+                            <h2>26.5.2018</h2>
+                            <h3>Massimo Carozzi – Safari</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="/mu/2018/052018-vaaalr.html">
+                            <h2>26.5.2018</h2>
+                            <h3>VA AA LR - Concert for Signal Flares</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="/mu/2018/052018-carozzi-reframing-suond.html">
+                            <h2>26.5.2018</h2>
+                            <h3>Massimo Carozzi – Reframing sound</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="/mu/2018/052018-marea-helicotrema.html">
                             <h2>25-26.5.2018</h2>
                             <h3>MU & Helicotrema</h3>
                         </a>
@@ -295,39 +319,15 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
-                            <h2>19.5.2018</h2>
-                            <h3>Casas / Tricoli / Bellows</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
-                            <h2>19.5.2018</h2>
-                            <h3>Musiche e ascolti peripatetici</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
-                            <h2>26.5.2018</h2>
-                            <h3>Reframing sound</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2018/052018-davide-tidoni.html">
                             <h2>25-26.5.2018</h2>
-                            <h3>Touch of the Pops</h3>
+                            <h3>Davide Tidoni – Touch of the Pops</h3>
                         </a>
                     </div>
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2018/052018-dom-milieu.html">
                             <h2>20.5.2018</h2>
                             <h3>DOM- – Milieu. Pratiche per farsi ambiente</h3>
                         </a>
@@ -335,9 +335,25 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2018/052018-aliossi.html">
                             <h2>20.5.2018</h2>
                             <h3>Aliossi</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="/mu/2018/052018-casas-tricoli-bellows.html">
+                            <h2>19.5.2018</h2>
+                            <h3>Casas / Tricoli / Bellows</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="/mu/2018/052018-elena-biserna.html">
+                            <h2>19.5.2018</h2>
+                            <h3>Elena Biserna – Musiche e ascolti peripatetici</h3>
                         </a>
                     </div>
                 </li>
@@ -364,26 +380,28 @@
                             <h3>Janneke van der Putten – Solo</h3>
                         </a>
                     </div>
-                </li>
+                </li> -->
+
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2018/042018-sec_.html">
                             <h2>26.4.2018</h2>
                             <h3>SEC_ – Solo</h3>
                         </a>
                     </div>
                 </li>
+
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2018/032018-on-theme.html">
                             <h2>8.3.2018</h2>
-                            <h3>Clio Casadei – On Theme</h3>
+                            <h3>On Theme</h3>
                         </a>
                     </div>
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2018/032018-filippo-tappi.html">
                             <h2>21.3.2018</h2>
                             <h3>Filippo Tappi</h3>
                         </a>
@@ -391,7 +409,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2018/032018-discomateria.html">
                             <h2>23.3.2018</h2>
                             <h3>Andrea Borghi – Discomateria</h3>
                         </a>
@@ -399,15 +417,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
-                            <h2>2-9.6.2018</h2>
-                            <h3>Clio Casadei – Soggetto</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2018/012018-konrad-sprenger.html">
                             <h2>20.1.2018</h2>
                             <h3>Konrad Sprenger</h3>
                         </a>
@@ -424,7 +434,7 @@
                 <!-- 2017 -->
                 <li class="content--block" id="2017">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2017/122017-nuova-critica-ambientale.html">
                             <h2>19.12.2017</h2>
                             <h3>Gaspare Caliri – Nuova Critica Ambientale</h3>
                         </a>
@@ -432,15 +442,15 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2017/112017-seijiro-murayama.html">
                             <h2>28.11.2017</h2>
-                            <h3>Seijiro – Solo</h3>
+                            <h3>Seijiro Murayama – Solo</h3>
                         </a>
                     </div>
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2017/112017-tomoko-sauvage.html">
                             <h2>27.11.2017</h2>
                             <h3>Tomoko Sauvage – Waterbowls solo performance</h3>
                         </a>
@@ -448,7 +458,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2017/102017-il-cielo-è-il-nostro-palcoscenico.html">
                             <h2>24.10.2017</h2>
                             <h3>Il Cielo è il Nostro Palcoscenico</h3>
                         </a>
@@ -456,15 +466,15 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
-                            <h2>6.9.2017</h2>
+                        <a href="/mu/2017/062017-orto-magnetico.html">
+                            <h2>6-9.2017</h2>
                             <h3>Orto Magnetico</h3>
                         </a>
                     </div>
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2017/082017-seiji-morimoto.html">
                             <h2>20.8.2017</h2>
                             <h3>Seiji Morimoto</h3>
                         </a>
@@ -472,7 +482,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2017/082017-seymour-wright.html">
                             <h2>6.8.2017</h2>
                             <h3>Seymour Wright</h3>
                         </a>
@@ -480,7 +490,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2017/052017-mu05.html">
                             <h2>5-6.5.2017</h2>
                             <h3>MU05</h3>
                         </a>
@@ -488,15 +498,15 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2017/042017-ryoko-akama.html">
                             <h2>11.4.2017</h2>
-                            <h3>Ryoko Akama</h3>
+                            <h3>Ryoko Akama – Solo</h3>
                         </a>
                     </div>
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2017/032017-mu04.html">
                             <h2>21-28.3.2017</h2>
                             <h3>MU04</h3>
                         </a>
@@ -505,7 +515,7 @@
                 <!-- 2016 -->
                 <li class="content--block" id="2016">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2016/122016-stephen-cornford.html">
                             <h2>3-4.12.2016</h2>
                             <h3>Stephen Cornford</h3>
                         </a>
@@ -513,7 +523,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2016/112016-mu03.html">
                             <h2>12-13.11.2016</h2>
                             <h3>MU03</h3>
                         </a>
@@ -521,7 +531,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2016/112016-mu-non-esiste.html">
                             <h2>5-27.11.2016</h2>
                             <h3>MU non esiste</h3>
                         </a>
@@ -529,7 +539,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2016/102016-tule.html">
                             <h2>29.10.2016-18.12.2016</h2>
                             <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
                         </a>
@@ -537,7 +547,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2016/072016-mu02.html">
                             <h2>31.7.2016</h2>
                             <h3>MU02</h3>
                         </a>
@@ -545,7 +555,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2016/062016-mu01.html">
                             <h2>9.6.2016</h2>
                             <h3>MU01</h3>
                         </a>
@@ -553,7 +563,7 @@
                 </li>
                 <li class="content--block">
                     <div class="content--list">
-                        <a href="">
+                        <a href="/mu/2016/052016-mu00.html">
                             <h2>21.5.2016</h2>
                             <h3>MU00</h3>
                         </a>
@@ -567,7 +577,8 @@
             <h3 class="btn--menu"><a href="index.html">Me<br>nu</a></h3>
         </div>
     </main>
-    <script>
+    <script src="script.js"></script>
+    <!-- <script>
         const btns = document.querySelectorAll(".nav--link");
         btns[0].classList.add("active");
         btns.forEach(b => {
@@ -578,7 +589,7 @@
                 b.classList.add("active");
             });
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
