--- a/tule.html
+++ b/tule.html
@@ -46,7 +46,20 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <div class="content--image"><img src="assets/uploads/eventi/tule/tule-2021.jpg"></div>
+            <ul class="content--nav">
+                <li class="nav--link">
+                    <h2><a href="/mu/2021/082021-tule.html">Tule 2021</a></h2>
+                </li>
+                <li class="nav--link">
+                    <h2><a href="/mu/2020/082020-tule.html">Tule 2020</a></h2>
+                </li>
+                <li class="nav--link">
+                    <h2><a href="/mu/2018/012018-tule.html">Tule 2018</a></h2>
+                </li>
+                <li class="nav--link">
+                    <h2><a href="/mu/2016/102016-tule.html">Tule 2016</a></h2>
+                </li>
+            </ul>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -57,12 +70,12 @@
                     coinvolgere il pubblico in un percorso informale tra discipline eterogenee legate da un comune
                     approccio alla valorizzazione degli spazi, alla sostenibilità delle pratiche artistiche, alla
                     rivitalizzazione del rapporto tra cittadinanza, creatività e patrimonio ambientale e urbano, con
-                    particolare riferimento all’ambito fluviale della città di Cesena.</p>
-                <p>L’intento è di avviare un processo di rigenerazione esperienziale di un ambito territoriale poco
+                    particolare riferimento all'ambito fluviale della città di Cesena.</p>
+                <p>L'intento è di avviare un processo di rigenerazione esperienziale di un ambito territoriale poco
                     frequentato, stimolare una nuova abitabilità e ampliare la consapevolezza ecologica del contesto
                     naturale attraverso pratiche di ascolto attivo.</p>
             </div>
-            <div class="content--block">
+            <!-- <div class="content--block">
                 <div class="nav--link">
                     <h2><a href="/mu/2021/082021-tule.html">Tule 2021</a></h2>
                 </div>
@@ -75,11 +88,9 @@
                 <div class="nav--link">
                     <h2><a href="">Tule 2016</a></h2>
                 </div>
-            </div>
+            </div> -->
         </section>
         <div class="nav--btn">
-            <!-- <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
-            <h3><a href="index.html">Mu</a></h3> -->
             <h3 class="btn--menu"><a href="index.html">Me<br>nu</a></h3>
         </div>
     </main>
