ready for review

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 </ul>
                 <ul class="menu--projects content--open">
                     <li><br><a href="tule.html">Tule</a></li>
-                    <li><a href="">Elementi</a></li>
-                    <li><a href="">3ECO – Cienfuegos</a></li>
+                    <li><a href="elementi.html">Elementi</a></li>
+                    <li><a href="3eco-cienfuegos.html">3ECO – Cienfuegos</a></li>
                 </ul>
             </nav>
         </header>
