--- a/tule.html
+++ b/tule.html
@@ -46,20 +46,23 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <ul class="content--nav">
-                <li class="nav--link">
+            <div class="content--image">
+                <img src="../assets/uploads/eventi/tule/tule-general.png">
+            </div>
+            <!-- <ul class="content--nav">
+                <li>
                     <h2><a href="/mu/2021/082021-tule.html">Tule 2021</a></h2>
                 </li>
-                <li class="nav--link">
+                <li>
                     <h2><a href="/mu/2020/082020-tule.html">Tule 2020</a></h2>
                 </li>
-                <li class="nav--link">
+                <li>
                     <h2><a href="/mu/2018/012018-tule.html">Tule 2018</a></h2>
                 </li>
-                <li class="nav--link">
+                <li>
                     <h2><a href="/mu/2016/102016-tule.html">Tule 2016</a></h2>
                 </li>
-            </ul>
+            </ul> -->
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -75,20 +78,23 @@
                     frequentato, stimolare una nuova abitabilità e ampliare la consapevolezza ecologica del contesto
                     naturale attraverso pratiche di ascolto attivo.</p>
             </div>
-            <!-- <div class="content--block">
-                <div class="nav--link">
-                    <h2><a href="/mu/2021/082021-tule.html">Tule 2021</a></h2>
-                </div>
-                <div class="nav--link">
-                    <h2><a href="/mu/2020/082020-tule.html">Tule 2020</a></h2>
-                </div>
-                <div class="nav--link">
-                    <h2><a href="/mu/2018/012018-tule.html">Tule 2018</a></h2>
-                </div>
-                <div class="nav--link">
-                    <h2><a href="">Tule 2016</a></h2>
-                </div>
-            </div> -->
+            <div class="content--block">
+                <ul class="content--nav">
+                    <li>
+                        <h2><a href="/mu/2021/082021-tule.html">Tule 2021</a></h2>
+                    </li>
+                    <li>
+                        <h2><a href="/mu/2020/082020-tule.html">Tule 2020</a></h2>
+                    </li>
+                    <li>
+                        <h2><a href="/mu/2018/012018-tule.html">Tule 2018</a></h2>
+                    </li>
+                    <li>
+                        <h2><a href="/mu/2016/102016-tule.html">Tule 2016</a></h2>
+                    </li>
+                </ul>
+            </div>
+
         </section>
         <div class="nav--btn">
             <h3 class="btn--menu"><a href="index.html">Me<br>nu</a></h3>
