--- a/elementi.html
+++ b/elementi.html
@@ -47,7 +47,7 @@
     <main class="main--pages">
         <section class="col--nav">
             <div class="content--image">
-                <img src="../assets/uploads/eventi/elementi/elementi-cover.jpeg">
+                <img src="assets/uploads/eventi/elementi/elementi-cover.jpeg">
             </div>
         </section>
         <section class="col--content">
