--- a/tule.html
+++ b/tule.html
@@ -47,7 +47,7 @@
     <main class="main--pages">
         <section class="col--nav">
             <div class="content--image">
-                <img src="../assets/uploads/eventi/tule/tule-general.png">
+                <img src="assets/uploads/eventi/tule/tule-general.png">
             </div>
             <!-- <ul class="content--nav">
                 <li>
