implement js and links behaviour

--- a/3eco-cienfuegos.html
+++ b/3eco-cienfuegos.html
@@ -48,16 +48,16 @@
         <section class="col--nav">
             <ul class="content--nav">
                 <li class="nav--link">
-                    <h2><a href="#spazio-1">Spazio 1</a></h2>
+                    <h2><a class="js-href" href="spazio-1">Spazio 1</a></h2>
                 </li>
                 <li class="nav--link">
-                    <h2><a href="#spazio-2">Spazio 2</a></h2>
+                    <h2><a class="js-href" href="spazio-2">Spazio 2</a></h2>
                 </li>
                 <li class="nav--link">
-                    <h2><a href="#spazio-3">Spazio 3</a></h2>
+                    <h2><a class="js-href" href="spazio-3">Spazio 3</a></h2>
                 </li>
                 <li class="nav--link">
-                    <h2><a href="#spazio-4">Spazio 4</a></h2>
+                    <h2><a class="js-href" href="spazio-4">Spazio 4</a></h2>
                 </li>
             </ul>
         </section>
