--- a/eventi.html
+++ b/eventi.html
@@ -48,22 +48,22 @@
         <section class="col--nav --no-scrollbar" id="event--nav">
             <ul class="content--nav">
                 <li class="nav--link">
-                    <h2><a href="#2021">2021</a></h2>
+                    <h2><a class="js-href" href="2021">2021</a></h2>
                 </li>
                 <li class="nav--link">
-                    <h2><a href="#2020">2020</a></h2>
+                    <h2><a class="js-href" href="2020">2020</a></h2>
                 </li>
                 <li class="nav--link">
-                    <h2><a href="#2019">2019</a></h2>
+                    <h2><a class="js-href" href="2019">2019</a></h2>
                 </li>
                 <li class="nav--link">
-                    <h2><a href="#2018">2018</a></h2>
+                    <h2><a class="js-href" href="2018">2018</a></h2>
                 </li>
                 <li class="nav--link">
-                    <h2><a href="#2017">2017</a></h2>
+                    <h2><a class="js-href" href="2017">2017</a></h2>
                 </li>
                 <li class="nav--link">
-                    <h2><a href="#2016">2016</a></h2>
+                    <h2><a class="js-href" href="2016">2016</a></h2>
                 </li>
             </ul>
 
