--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
             </div>
         </footer>
     </main>
+    <canvas id="canvas"></canvas>
     <script src="script.js"></script>
+    <!-- <script src="canvas.js"></script> -->
 </body>
 
 </html>
