--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </main>
     <canvas id="canvas"></canvas>
     <script src="script.js"></script>
-    <!-- <script src="canvas.js"></script> -->
+    <script src="canvas.js"></script>
 </body>
 
 </html>
