update links (about page)

--- a/3eco-cienfuegos.html
+++ b/3eco-cienfuegos.html
@@ -97,7 +97,7 @@
             <div class="content--block">
                 <p>Riverberi ed eco iniziano all'altezza di questa scritta. Mantenendola alla vostra destra gli effetti
                     sonori continuano per tutta la Via fino all'incrocio.</p>
-                <p><strong>Battere sonoramente le mani per attivare il suono</strong>.</p>
+                <p><u>Battere sonoramente le mani per attivare il suono</u>.</p>
             </div>
 
             <div class="content--block" id="spazio-2">
@@ -110,7 +110,7 @@
             <div class="content--block">
                 <p>L'edicola è posta nell'angolo di un edificio in cui è presente una corte interna, quasi sempre
                     accessibile, in cui sono presenti poderosi effetti sonori.</p>
-                <p><strong>Battere sonoramente le mani per attivare il suono</strong>.</p>
+                <p><u>Battere sonoramente le mani per attivare il suono</u>.</p>
             </div>
 
             <div class="content--block" id="spazio-3">
@@ -121,7 +121,7 @@
                 <img src="assets/uploads/eventi/3eco/spazio-3.jpeg">
             </div>
             <div class="content--block">
-                <p><strong>Battere sonoramente le mani per attivare il suono</strong>.</p>
+                <p><u>Battere sonoramente le mani per attivare il suono</u>.</p>
             </div>
 
             <div class="content--block" id="spazio-4">
