--- a/about.html
+++ b/about.html
@@ -54,11 +54,11 @@
                 </li>
                 <li>
                     <h2>Sostieni MU</h2>
-                    <p><a href="">Compila il form online</a></p>
+                    <p><a href="https://form.jotform.com/221662148400043" target="_blank">Compila il form online</a></p>
                 </li>
                 <li>
                     <h2>Newsletter</h2>
-                    <p><a href="">Iscriviti</a></p>
+                    <p><a href="http://eepurl.com/hd1_zn" target="_blank">Iscriviti</a></p>
                 </li>
             </ul>
         </section>
@@ -96,8 +96,6 @@
 
         </section>
         <div class="nav--btn">
-            <!-- <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
-            <h3><a href="index.html">Mu</a></h3> -->
             <h3 class="btn--menu"><a href="index.html">Me<br>nu</a></h3>
         </div>
     </main>
