--- a/tule.html
+++ b/tule.html
@@ -8,30 +8,28 @@
     <title>MU | TULE</title>
 
     <meta name="description"
-        content="Tule coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
+        content="TULE coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
     <link rel="canonical" href="https://www.mmmu.it/">
     <meta name="keywords" content="ascolto attivo, fiume, soundwalk, soundwork">
-    <meta name="author" content="Giulia Polenta">
-
     <meta property="og:locale" content="it_IT">
     <meta property="og:type" content="website">
     <meta property="og:title" content="MU">
     <meta property="og:description"
-        content="Tule coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
+        content="TULE coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
     <meta property="og:url" content="https://www.mmmu.it/">
     <meta property="og:site_name" content="MU">
-    <meta property="og:image" content="assets/uploads/images/tule.jpeg">
+    <meta property="og:image" content="../assets/uploads/images/tule.jpeg">
     <meta property="og:image:alt"
-        content="La scritta Tule è ripetuta due volte, specchiata, e lo sfondo verde contiene il logo di MU, con la forma di una mandorla">
-    <meta property="og:image:secure_url" content="assets/uploads/images/tule.jpeg">
+        content="La parola TULE è ripetuta due volte, specchiata, e lo sfondo verde contiene il logo di MU, con la forma di una mandorla">
+    <meta property="og:image:secure_url" content="../assets/uploads/images/tule.jpeg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description"
-        content="Tule coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
+        content="TULE coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
     <meta name="twitter:title"
-        content="Tule coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
-    <meta name="twitter:image" content="assets/uploads/images/tule.jpeg">
+        content="TULE coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
+    <meta name="twitter:image" content="../assets/uploads/images/tule.jpeg">
     <meta name="twitter:image:alt"
-        content="La scritta Tule è ripetuta due volte, specchiata, e lo sfondo verde contiene il logo di MU, con la forma di una mandorla">
+        content="La parola TULE è ripetuta due volte, specchiata, e lo sfondo verde contiene il logo di MU, con la forma di una mandorla">
 
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
@@ -81,16 +79,16 @@
             <div class="content--block">
                 <ul class="content--nav">
                     <li>
-                        <h2><a href="/mu/2021/082021-tule.html">Tule 2021</a></h2>
+                        <h2><a href="2021/082021-tule.html">Tule 2021</a></h2>
                     </li>
                     <li>
-                        <h2><a href="/mu/2020/082020-tule.html">Tule 2020</a></h2>
+                        <h2><a href="2020/082020-tule.html">Tule 2020</a></h2>
                     </li>
                     <li>
-                        <h2><a href="/mu/2018/012018-tule.html">Tule 2018</a></h2>
+                        <h2><a href="2018/012018-tule.html">Tule 2018</a></h2>
                     </li>
                     <li>
-                        <h2><a href="/mu/2016/102016-tule.html">Tule 2016</a></h2>
+                        <h2><a href="2016/102016-tule.html">Tule 2016</a></h2>
                     </li>
                 </ul>
             </div>
